deploy/networking/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
spec:
  # Override both hosts entries as needed, note the tls: match should be completely replaced in overlays since its an array
  hosts:
  - "login.dso.mil"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: keycloak-http
  tls:
  - match:
    - port: 443
      sniHosts:
      - login.dso.mil
    route:
    - destination:
        host: keycloak-http
        port:
          number: 8443
